As per Arthur's review, I added Javadoc, fixed code smells from sonarqube, and changed the error message for plant name to have correct spelling